fixed z-index of notes

--- a/src/styles/NoteApp.css
+++ b/src/styles/NoteApp.css
@@ -198,7 +198,7 @@ body {
     display: flex;
     height: 100vh;
     width: 100vw;
-    z-index: 2;
+    z-index: 999;
     top:0;
     left:0;
     backdrop-filter: blur(20px);
@@ -208,13 +208,15 @@ body {
 }
 
 .zoomed-note {
+    position: fixed;
     height: 80vh;
     width: 75vw;
     border-radius: 20px;
     padding: 20px;
     background-color: rgb(51, 51, 51);
     max-width: 700px;
-    z-index: 2;
+    z-index: 999;
+    color: white;
 }
 
 .zn-header {
